<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/solo_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mikael.quaestiofix.SoloGameActivity"
    tools:showIn="@layout/activity_solo"
    android:background="@drawable/hoola">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans1"
        android:id="@+id/btnans1"
        android:layout_above="@+id/btnans2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans2"
        android:id="@+id/btnans2"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnans1"
        android:layout_alignStart="@+id/btnans1"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans3"
        android:id="@+id/btnans3"
        android:layout_below="@+id/btnans2"
        android:layout_alignLeft="@+id/btnans2"
        android:layout_alignStart="@+id/btnans2"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans4"
        android:id="@+id/btnans4"
        android:layout_below="@+id/btnans3"
        android:layout_alignLeft="@+id/btnans3"
        android:layout_alignStart="@+id/btnans3"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question"
        android:id="@+id/lblquestion"
        android:textColor="#fefcfc"
        android:textAlignment="center"
        android:layout_below="@+id/lblscores"
        android:layout_toRightOf="@+id/lblscores"
        android:layout_toEndOf="@+id/lblscores" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/difficulty"
        android:id="@+id/lbldifficulty"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/score"
        android:id="@+id/lblscores"
        android:textColor="#fefefe"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
